Updated the code. full js refactoring. Updated the readme.

--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   </head>
   <body>
     <div class="piano">
-      <button class="white-key C4-key"></button>
-      <button class="black-key Db4-key"></button>
-      <button class="white-key D4-key"></button>
-      <button class="black-key Eb4-key"></button>
-      <button class="white-key E4-key"></button>
-      <button class="white-key F4-key"></button>
-      <button class="black-key Gb4-key"></button>
-      <button class="white-key G4-key"></button>
-      <button class="black-key Ab4-key"></button>
-      <button class="white-key A4-key"></button>
-      <button class="black-key Bb4-key"></button>
-      <button class="white-key B4-key"></button>
-      <button class="white-key C5-key"></button>
-      <button class="black-key Db5-key"></button>
-      <button class="white-key D5-key"></button>
-      <button class="black-key Eb5-key"></button>
-      <button class="white-key E5-key"></button>
+      <button class="white-key C4-key" id="C4"></button>
+      <button class="black-key Db4-key" id="Db4"></button>
+      <button class="white-key D4-key" id="D4"></button>
+      <button class="black-key Eb4-key" id="Eb4"></button>
+      <button class="white-key E4-key" id="E4"></button>
+      <button class="white-key F4-key" id="F4"></button>
+      <button class="black-key Gb4-key" id="Gb4"></button>
+      <button class="white-key G4-key" id="G4"></button>
+      <button class="black-key Ab4-key" id="Ab4"></button>
+      <button class="white-key A4-key" id="A4"></button>
+      <button class="black-key Bb4-key" id="Bb4"></button>
+      <button class="white-key B4-key" id="B4"></button>
+      <button class="white-key C5-key" id="C5"></button>
+      <button class="black-key Db5-key" id="Db5"></button>
+      <button class="white-key D5-key" id="D5"></button>
+      <button class="black-key Eb5-key" id="Eb5"></button>
+      <button class="white-key E5-key" id="E5"></button>
     </div>
 
     <script src="script.js"></script>
